🎨 style(mainNavigation.module.scss): adjust MainNavigation menu position and add overflow-y to prevent menu from overflowing 🎨 style(mainNavigation.module.scss): add media query to only show backdrop on larger screens

--- a/src/components/molecules/Navigation/MainNavigation/mainNavigation.module.scss
+++ b/src/components/molecules/Navigation/MainNavigation/mainNavigation.module.scss
@@ -104,12 +104,13 @@
       background: tokens.$c-white;
       width: 100vw;
       position: absolute;
-      top: 5rem;
+      top: 4rem;
       right: 0;
       list-style: none;
       margin: 0;
       padding: 0;
       height: 100vh;
+      overflow-y: auto;
 
       @media (min-width: tokens.$mq-800) {
         left: 3.2rem;
@@ -232,17 +233,19 @@
   &.openMenu {
     background: tokens.$c-gray-200;
 
-    &::before {
-      content: '';
-      display: block;
-      width: 100vw;
-      height: 100vh;
-      position: fixed;
-      top: 0;
-      left: 0;
-      background: rgba(tokens.$c-black, 0.7);
-      backdrop-filter: blur(5px);
-      z-index: tokens.$layer-1;
+    @media (min-width: tokens.$mq-800) {
+      &::before {
+        content: '';
+        display: block;
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: rgba(tokens.$c-black, 0.7);
+        backdrop-filter: blur(5px);
+        z-index: tokens.$layer-1;
+      }
     }
 
     &::after {
